--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -11,6 +11,9 @@ Dark green: #28b485
     padding: 0;
     box-sizing: border-box;
 }
+html{
+    font-size: 10px;
+}
 body{
     font-family: "Lato",sans-serif;
     font-weight: 400;
@@ -41,12 +44,13 @@ body{
     top: 40%;
     left: 50%;
     transform: translate(-50%,-50%);
+    text-align: center;
 }
 
 .heading-primary{
     color: #fff;
     text-transform: uppercase;
-    
+    margin-bottom: 60px;
 
 }
 .heading-primary-main{
@@ -63,6 +67,54 @@ body{
     letter-spacing: 17.4px;
     animation: 2s moveInRight ease-out;
 }
+
+
+.btn:link,
+.btn:visited{
+    text-transform: uppercase;
+    text-decoration:none;
+    padding: 15px 40px;
+    display: inline-block;
+    border-radius: 100px;
+    transition: all 0.2s;
+    position: relative;
+}
+.btn:hover{
+    transform: translateY(-5px);
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
+}
+.btn:active{
+    transform: translateY(-1px);
+    box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
+}
+.btn-white{
+    background-color: #fff;
+    color: #777;
+}
+.btn::after{
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    background-color: #fff;
+    transition: all 0.5s 
+}
+
+.btn:hover::after{
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
+}
+.btn-animated{
+  
+    animation: moveInBottom 0.4s ease-out 0.75s;
+    animation-fill-mode: backwards;
+}
+
 @keyframes moveInLeft{
     0%{
         opacity: 0;
@@ -87,5 +139,15 @@ body{
     100%{
         opacity: 1;
         transform: translateX(0%)
+    }
+}
+@keyframes moveInBottom{
+    0%{
+        opacity: 0;
+        transform: translateY(30px);
+    }
+    100%{
+        opacity: 1;
+        transform: translate(0);
     }
 }
