--- a/starter/css/style.css
+++ b/starter/css/style.css
@@ -12,7 +12,7 @@ Dark green: #28b485
     box-sizing: border-box;
 }
 html{
-    font-size: 10px;
+    font-size:62.5%;
 }
 body{
     font-family: "Lato",sans-serif;
@@ -30,16 +30,16 @@ body{
     clip-path: polygon(0 0,100% 0,100% 75vh,0 100%);
     position: relative;
 }
-.logo {
+.header__logo-box{
     position: absolute;
     top: 40px;
     left: 40px;
 }
-.logo img{
+.header__logo{
     height: 35px;
 }
 
-.text-box{
+.header__text-box{
     position: absolute;
     top: 40%;
     left: 50%;
@@ -53,14 +53,14 @@ body{
     margin-bottom: 60px;
 
 }
-.heading-primary-main{
+.heading-primary--main{
     display: block;
     font-size: 60px;
     font-weight: 400;
     letter-spacing: 35px;
     animation: 2s moveInLeft ease-out;
 }
-.heading-primary-small{
+.heading-primary--small{
     display: block;
     font-size: 20px;
     font-weight: 700;
@@ -87,7 +87,7 @@ body{
     transform: translateY(-1px);
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
 }
-.btn-white{
+.btn--white{
     background-color: #fff;
     color: #777;
 }
@@ -109,7 +109,7 @@ body{
     transform: scaleX(1.4) scaleY(1.6);
     opacity: 0;
 }
-.btn-animated{
+.btn--animated{
   
     animation: moveInBottom 0.4s ease-out 0.75s;
     animation-fill-mode: backwards;
