--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -6,7 +6,7 @@
         padding: 15px 40px;
         display: inline-block;
         border-radius: 100px;
-        transition: all 0.2s;
+        transition: all .5s;
         position: relative;
     }
     &:hover{
@@ -21,10 +21,6 @@
         transform: translateY(-1px);
         box-shadow: 0 5px 20px rgba($color-black, 0.2);
     }
-    &--white{
-        background-color: #fff;
-        color: #777;
-    }
     &::after{
         content: "";
         display: inline-block;
@@ -36,10 +32,24 @@
         left: 0;
         z-index: -1;
         background-color: #fff;
-        transition: all 0.5s 
+        transition: all .5s 
     }
+    &--white{
+        background-color: #fff;
+        color: #777;
+        &::after{
+            background-color:$color-white;
+        }
+    }
+    &--green{
+        background-color: $color-primary;
+        color: $color-white;
+        &::after{
+            background-color:$color-primary;
+        }
+    }
+
     &--animated{
-  
         animation: moveInBottom 0.4s ease-out 0.75s;
         animation-fill-mode: backwards;
     }
