--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -13,6 +13,9 @@ $color-white:#fff;
 $color-grey-light-1:#f7f7f7;
 $color-grey-light-2:#eee;
 
+$color-grey-dark:#999;
+$color-grey-dark-2:#333;
+
 $default-font-size:1.6rem;
 //grid
 
