--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,11 +15,14 @@
 @import "components/card";
 @import "components/story";
 @import "components/bg-video";
+@import "components/form";
+
 
 @import "pages/home";
 
 @import "layout/header";
-@import "layout/grid"
+@import "layout/grid";
+@import "layout/footer";
 
 
 
