popup and beginning of RWD

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,30 +1,38 @@
 .heading-primary{
     color: #fff;
     text-transform: uppercase;
-    margin-bottom: 60px;
+    margin-bottom: 6rem;
     &--main{
         display: block;
-        font-size: 60px;
+        font-size: 6rem;
         font-weight: 400;
-        letter-spacing: 35px;
+        letter-spacing: 3.5rem;
         animation: 2s moveInLeft ease-out;
+
+        @include respond(phone){
+            letter-spacing: 1rem;
+            font-size: 5rem
+
+        }
     }
     &--small{
         display: block;
-        font-size: 20px;
+        font-size: 2rem;
         font-weight: 700;
         letter-spacing: 17.4px;
         animation: 2s moveInRight ease-out;
+        @include respond(phone){
+            letter-spacing: .5rem;
+        }
     }
 }
-body{
-    font-family: "Lato",sans-serif;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.7;
-    color: #777;
-    padding: 30px
-}
+    body{
+        font-family: "Lato",sans-serif;
+        font-weight: 400;
+        font-size: 1.6rem;
+        line-height: 1.7;
+        color: #777;
+    }
 
 .heading-secondary{
     font-size: 3.5rem;
@@ -37,6 +45,13 @@ body{
     color:transparent;
     letter-spacing: 2px;
     transition: all 0.2s; 
+    @include respond(tab-land){
+        font-size: 2.5rem;
+
+    }
+    @include respond(tab-port){
+        font-size: 2rem;    
+    }
 
     &:hover{
         transform: skewY(2deg) skewX(15deg) scale(1.1);
