--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -8,7 +8,10 @@
 .u-margin-top-medium{
     margin-top: 4rem;
 }
-
+.u-block{
+    display: block;
+    width: 100%;
+}
 
 .u-margin-bottom-big{
     margin-bottom: 8rem;
