--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,8 +7,28 @@
 }
 html{
     font-size:62.5%;
+    @include respond(tab-land){
+        font-size: 56.25%; //1rem = 9px 9/16
+    }
+    @include respond(tab-port){
+        font-size: 50%; //1rem = 8px 8/16 
+    }
+    // @include respond(phone){
+    //     font-size: 30%; 
+    // }
+    @include respond(big-desktop){
+        font-size: 75% //1rem =12 12/16
+    }
 }
 body{
     box-sizing: border-box;
+    padding: 3rem;
+    @include respond(tab-port){
+       padding: 0rem;
+    }
+}
+.row{
+    padding: 0;
+    margin: 0;
 }
 
