--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -4,7 +4,7 @@
     &:visited{
         text-transform: uppercase;
         text-decoration:none;
-        padding: 15px 40px;
+        padding: 1.5rem 4rem;
         display: inline-block;
         border-radius: 100px;
         transition: all .5s;
