--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,10 +1,15 @@
-.card{
+.card {
     -moz-perspective: 150rem;
     perspective: 150rem;
     height: 52rem;
     margin: 0 auto;
     position: relative;
-    &__side{
+
+    @media (max-width: 1199px) {
+        margin-bottom: 3rem;
+    }
+
+    &__side {
         position: absolute;
         height: 52rem;
         transition: all .8s ease;
@@ -14,58 +19,69 @@
         backface-visibility: hidden;
         border-radius: 3px;
         overflow: hidden;
-        box-shadow: 0 1.5rem 4rem rgba($color-black,.15);
-        &--front{
+        box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+
+        &--front {
             color: $color-white;
         }
-        &--back{
+
+        &--back {
             transform: rotateY(180deg);
-            &-1{
-                background-image: linear-gradient(to right bottom,$color-secondary-light, $color-secondary-dark);
+
+            &-1 {
+                background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark);
             }
-            &-2{
-                background-image: linear-gradient(to right bottom,$color-primary-light, $color-primary-dark);
+
+            &-2 {
+                background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
             }
-            &-3{
-                background-image: linear-gradient(to right bottom,$color-tertiary-light, $color-tertiary-dark,);
+
+            &-3 {
+                background-image: linear-gradient(to right bottom, $color-tertiary-light, $color-tertiary-dark, );
             }
         }
     }
-    &:hover &__side--front{
+
+    &:hover &__side--front {
         transform: rotateY(-180deg);
     }
-    &:hover &__side--back{
+
+    &:hover &__side--back {
         transform: rotateY(0deg);
     }
 
-    &__picture{
+    &__picture {
         background-size: cover;
         height: 23rem;
         background-blend-mode: screen;
-        clip-path: polygon(0 0, 100% 0,100% 85%,0 100%);
-        &--1{
+        clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+
+        &--1 {
             background-image:
-            linear-gradient(to right bottom,
-            $color-secondary-light,
-            $color-secondary-dark), 
-            url('../img/nat-5.jpg'),
+                linear-gradient(to right bottom,
+                $color-secondary-light,
+                $color-secondary-dark),
+                url('../img/nat-5.jpg'),
         }
-        &--2{
-            background-image: 
-            linear-gradient(to right bottom,
-            $color-primary-light,
-            $color-primary-dark),
-            url('../img/nat-6.jpg') 
-        }
-        &--3{
+
+        &--2 {
             background-image:
-            linear-gradient(to right bottom,
-            $color-tertiary-light,
-            $color-tertiary-dark), 
-            url('../img/nat-7.jpg')
+                linear-gradient(to right bottom,
+                $color-primary-light,
+                $color-primary-dark),
+                url('../img/nat-6.jpg')
+        }
+
+        &--3 {
+            background-image:
+                linear-gradient(to right bottom,
+                $color-tertiary-light,
+                $color-tertiary-dark),
+                url('../img/nat-7.jpg')
         }
     }
-    &__heading{
+
+    &__heading {
         font-size: 2.8rem;
         font-weight: 300;
         text-transform: uppercase;
@@ -73,69 +89,81 @@
         position: absolute;
         top: 12rem;
         right: 2rem;
-        text-align:right;
+        text-align: right;
         width: 55%;
-        
+
     }
-    &__heading-span{
+
+    &__heading-span {
         padding: 1rem 1.5rem;
         -webkit-box-direction: clone;
         box-decoration-break: clone;
-        &--1{
-            background-image: 
-            linear-gradient(to right bottom, 
-            rgba($color-secondary-light,.85),
-            rgba($color-secondary-dark,.85))
+
+        &--1 {
+            background-image:
+                linear-gradient(to right bottom,
+                rgba($color-secondary-light, .85),
+                rgba($color-secondary-dark, .85))
         }
-        &--2{
-            background-image: 
-            linear-gradient(to right bottom, 
-            rgba($color-primary-light,.85),
-            rgba($color-primary-dark,.85))
+
+        &--2 {
+            background-image:
+                linear-gradient(to right bottom,
+                rgba($color-primary-light, .85),
+                rgba($color-primary-dark, .85))
         }
-        &--3{
-            background-image: 
-            linear-gradient(to right bottom, 
-            rgba($color-tertiary-light,.85),
-            rgba($color-tertiary-dark,.85))
+
+        &--3 {
+            background-image:
+                linear-gradient(to right bottom,
+                rgba($color-tertiary-light, .85),
+                rgba($color-tertiary-dark, .85))
         }
     }
-    &__details{
+
+    &__details {
         padding: 3rem;
-        ul{
+
+        ul {
             margin: 0 auto;
             color: $color-black;
             list-style: none;
             width: 80%;
-            li{
+
+            li {
                 text-align: center;
                 font-size: 1.5rem;
                 padding: 1rem;
-                &:not(:last-child){
+
+                &:not(:last-child) {
                     border-bottom: 1px solid $color-grey-light-2;
                 }
             }
         }
     }
-    &__cta{
+
+    &__cta {
         position: absolute;
         top: 50%;
         left: 50%;
-        transform: translate(-50%,-50%);
+        transform: translate(-50%, -50%);
         width: 90%;
         text-align: center;
 
     }
-    &__price-box{
+
+    &__price-box {
         text-align: center;
         margin-bottom: 8rem;
-        color:$color-white;
+        color: $color-white;
     }
-    &__price-only{
+
+    &__price-only {
         font-size: 1.4rem;
         text-transform: uppercase
     }
-    &__price-value{
+
+    &__price-value {
         font-size: 6rem;
         font-weight: 300;
     }
