--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -3,6 +3,9 @@
     padding: 10rem 0;
     font-size: 1.4rem;
     color: $color-grey-light-1;
+    @include respond(tab-port){
+
+    }
     &__logo-box{
         text-align: center;
         margin-bottom: 8rem;
@@ -15,17 +18,25 @@
         border-top: 1px solid $color-grey-light-1;
         padding-top: 2rem;
         display: inline-block;
+        @media (max-width:991px) {
+            width: 100%;
+            text-align: center;
+            padding-bottom: 2rem;
+        }
     }
     &__list{
         list-style: none;
         display: flex;
         flex-wrap: wrap;
+          @media (max-width:991px) {
+          justify-content: center;
+        }
     }
     &__item{
         display: block;
         &:not(:last-child)
-        {margin-right:1.5rem 
-
+        {
+        margin-right:1.5rem 
         }      
     }
     &__link{
@@ -48,5 +59,10 @@
         padding-top: 2rem;
         margin-left: auto;
         margin-right: 0;
+         @media (max-width:991px) {
+            width: 100%;
+            text-align: center;
+            padding-bottom: 2rem;
+        }
     }
 }
