--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -52,6 +52,12 @@
     &__radio-group{
         width: 49%;
         display: inline-block;
+        @include respond(tab-port) {
+            width: 100%;
+           &:nth-of-type(2){
+            margin-top: 2rem;
+           } 
+        }
     }
     &__radio-label{
         font-size: $default-font-size;
