--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -10,12 +10,22 @@
     margin-bottom: 5rem;
     transform: skewX(-12deg);
 
-    @include respond(tab-land) {
-        width: 70%;
-    }
-
     &>* {
         transform: skewX(12deg);
+    }
+     @include respond(tab-port) {
+        width: 100%;
+        padding: 4rem;
+        padding-left: 7rem;
+        margin: 2rem 4rem;
+    }
+    @include respond(tab-port) {
+        transform: skew(0);
+
+    }
+    @media (max-width:500px) {
+        padding: 2rem;
+        margin: 2rem;
     }
 
     &__shape {
@@ -28,6 +38,15 @@
         clip-path: circle(50% at 50% 50%);
         transform: translateX(-3rem) skewX(12deg);
         position: relative;
+         @include respond(tab-port) {
+            transform: translate(-3rem) skew(0);
+        }
+        @media (max-width:500px) {
+            transform: translate(0) skew(0);
+            float: none;
+            margin:0 auto;
+            margin-bottom:1.8rem; 
+        }
     }
 
     &__image {
@@ -38,6 +57,9 @@
 
     &__text {
         transform: skewX(12deg);
+        @include respond(tab-port){
+            transform: skewX(0);
+        }
     }
 
     &__caption {
