--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,79 +1,125 @@
 .section-about {
-    background-color: $color-grey-light-1;
-    padding: 25rem 10rem;
-    margin-top: -20vh;
+  background-color: $color-grey-light-1;
+  padding: 25rem 10rem;
+  margin-top: -20vh;
 
-    [class^="col-"] {
-        padding-right: 4rem;
-        padding-left: 4rem;
-    }
+  [class^="col-"] {
+    padding-right: 4rem;
+    padding-left: 4rem;
+  }
+  @include respond(tab-port) {
+    padding: 20rem 5rem;
+  }
 }
 
 .section-features {
-    padding: 20rem 10rem;
-    margin-top: -10rem;
-    background-image: linear-gradient(to right bottom,
-        rgba($color-primary-light, 0.8),
-        rgba($color-primary-dark, 0.8)),
-        url("../img/nat-4.jpg");
-    background-size: cover;
+  padding: 20rem 10rem;
+  margin-top: -10rem;
+  background-image: linear-gradient(
+      to right bottom,
+      rgba($color-primary-light, 0.8),
+      rgba($color-primary-dark, 0.8)
+    ),
+    url("../img/nat-4.jpg");
+  background-size: cover;
 
-    [class^="col-"] {
-        padding-right: 6rem;
-        padding-left: 6rem;
+  [class^="col-"] {
+    padding-right: 2rem;
+    padding-left: 2rem;
+    @media (min-width: 160rem) {
+      padding-right: 6rem;
+      padding-left: 6rem;
     }
+  }
 
-    transform: skewY(-7deg);
+  transform: skewY(-7deg);
 
-    &>* {
-        transform: skewY(7deg);
-    }
-
-    ;
+  & > * {
+    transform: skewY(7deg);
+  }
+  @include respond(tab-port) {
+    padding: 15rem 5rem;
+  }
+  @include respond(phone) {
+    padding: 7rem 1rem;
+  }
 }
 
 .section-tours {
-    background-color: $color-grey-light-1;
+  background-color: $color-grey-light-1;
+  padding: 20rem 8rem;
+  @media (min-width: 180rem) {
     padding: 25rem 10rem;
-
-    [class^="col-"] {
-        padding-right: 6rem;
-        padding-left: 6rem;
-
-        @media (max-width: 1199px) {
-            padding: 0rem;
-        }
+  }
+  [class^="col-"] {
+    @media (min-width: 154rem) {
+      padding-right: 5rem;
+      padding-left: 5rem;
     }
+  }
+  @include respond(tab-port) {
+    padding: 20rem 5rem;
+  }
+  @include respond(phone){
+    padding: 10rem 1.5rem;
+  }
 }
 
 .section-stories {
-    padding: 15rem 0;
-    position: relative;
-    background-color: transparent;
+  padding: 15rem 0;
+  position: relative;
+  background-color: transparent;
+  @include respond(tab-port) {
+    padding: 10rem 0rem;
+  }
 }
 
 .section-book {
-    padding: 15rem 0;
-    background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+  padding: 15rem 0;
+  background-image: linear-gradient(to right bottom, $color-primary-light, $color-primary-dark);
+  @include respond(tab-port) {
+    padding: 10rem 0rem;
+  }
 }
 
 .book {
-    background-image:
-        linear-gradient((105deg,
-        rgba($color-white, .9) 0%,
-        rgba($color-white, .9) 50%,
-        transparent 50%)),
-        url('../img/nat-10.jpg');
-    margin: 0 auto;
-    background-size: cover;
-    border-radius: 3px;
-    box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
-    width: 80%;
-    height: 50rem;
-
-    &__form {
-        width: 50%;
-        padding: 6rem;
-
+  background-image: linear-gradient(
+      (105deg, rgba($color-white, 0.9) 0%, rgba($color-white, 0.9) 50%, transparent 50%)
+    ),
+    url("../img/nat-10.jpg");
+  margin: 0 auto;
+  background-size: cover;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba($color-black, 0.15);
+  width: 80%;
+  @include respond(tab-land) {
+    background-image: linear-gradient(
+        105deg,
+        rgba($color-white, 0.9) 0%,
+        rgba($color-white, 0.9) 70%,
+        transparent 50%
+      ),
+      url("../img/nat-10.jpg");
+  }
+  @media (max-width: 70rem) {
+    background-image: linear-gradient(
+        to right,
+        rgba($color-white, 0.9) 0%,
+        rgba($color-white, 0.9) 100%,
+        transparent 50%
+      ),
+      url("../img/nat-10.jpg");
+      width: 95%;
+  }
+  &__form {
+    width: 50%;
+    padding: 6rem;
+    @include respond(tab-land) {
+      width: 70%;
     }
+    @media (max-width: 70rem) {
+      width: 100%;
+      padding: 3rem;
+    }
+  }
 }
