--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -1,73 +1,102 @@
-.popup{
-    height: 100vh;
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: rgba($color-black,.8);
-    z-index: 9999;
+.popup {
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba($color-black, 0.8);
+  z-index: 9999;
+  opacity: 0;
+  visibility: hidden;
+  transition: all 0.3s;
+  overflow: scroll;
+  .row {
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+  &:target {
+    opacity: 1;
+    visibility: visible;
+  }
+  &:target &__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
+  }
+  &__content {
+    width: 75%;
+    background-color: $color-white;
+    box-shadow: 0 2rem 4rem rgba($color-black, 0.2s);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0.5);
     opacity: 0;
-    visibility: hidden;
-    transition: all .3s;
-    .row{
-        margin-left: -15px;
-        margin-right: -15px;
+    transition: all 0.4s 0.2s;
+  }
+  &__left {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    @media(max-width:1199px){
+        flex-direction: row;
+        justify-content: space-evenly;
     }
-    &:target{
-        opacity: 1;
-        visibility: visible;
+  }
+  &__right {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+  &__right-content {
+    padding-left: 2.4rem;
+  }
+  &__img {
+    display: block;
+    width: 100%;
+    max-width: 375px;
+    @media(max-width:1199px){
+        width: 50%;
+        height: 100%;
     }
-    &:target &__content {
-        opacity: 1;
-        transform: translate(-50%,-50%) scale(1);
+  }
+  &__text {
+    column-count: 2;
+    column-gap: 4rem;
+    column-rule: 1px solid $color-grey-light-2;
+    margin-bottom: 4rem;
+    padding: 0 2rem;
+    @include respond(tab-port){
+        column-count: 1;
     }
-    &__content{
-        width: 75%;
-        background-color: $color-white;
-        box-shadow: 0 2rem 4rem rgba($color-black, .2s);
-        position: absolute;
-        top:50%;
-        left: 50%;
-        transform: translate(-50%,-50%) scale(.5);
-        opacity: 0;
-        transition: all .4s .2s;
+  }
+  &__close {
+    &:link,
+    &:visited {
+      color: $color-grey-dark;
+      position: absolute;
+      top: 0.5rem;
+      right: 3.5rem;
+      font-size: 3rem;
+      text-decoration: none;
+      display: inline-block;
+      line-height: 1;
+        @include respond(phone){
+        top: 0;
+        right: 2.5rem;
     }
-    &__left{
-       padding: 0;
     }
-    &__right{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
+    &:hover {
+      color: $color-primary;
     }
-    &__right-content{
-         padding-left: 2.4rem;
-    }
-    &__img{
-        display: block;
-        width: 100%;
-    }
-    &__text{
-        column-count: 2;
-        column-gap: 4rem;
-        column-rule: 1px solid $color-grey-light-2;
-        margin-bottom: 4rem;
-    }
-    &__close{
-        &:link,&:visited{
-            color: $color-grey-dark;
-            position: absolute;
-            top: 0.5rem;
-            right: 3.5rem;
-            font-size: 3rem;
-            text-decoration: none;
-            display: inline-block;
-            line-height: 1;
-        }
-        &:hover{
-            color: $color-primary;
-        }
-    }
-
+  
+  }
+  .btn.btn--green{
+      margin-bottom: 1rem;
+  }
+ 
+     
+  
 }
