--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -51,12 +51,12 @@
   @media (min-width: 180rem) {
     padding: 25rem 10rem;
   }
-  [class^="col-"] {
-    @media (min-width: 154rem) {
+    @media (min-width: 1400px) {
+      [class^="col-"]{
       padding-right: 5rem;
       padding-left: 5rem;
+      }
     }
-  }
   @include respond(tab-port) {
     padding: 20rem 5rem;
   }
