--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -10,6 +10,12 @@
   visibility: hidden;
   transition: all 0.3s;
   overflow: scroll;
+
+  @supports(backdrop-filter: blur(10px)){
+     backdrop-filter: blur(10px);
+     background-color: rgba($color-black, 0.3);
+  }
+ 
   .row {
     margin-left: -15px;
     margin-right: -15px;
