--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -1,87 +1,91 @@
 .story {
-    width: 55%;
-    margin: 0 auto;
-    box-shadow: 0 3rem 6rem rgba($color-black, .1);
-    background-color: rgba($color-white, .6);
-    border-radius: 3px;
-    padding: 6rem;
-    padding-left: 9rem;
-    font-size: $default-font-size;
-    margin-bottom: 5rem;
-    transform: skewX(-12deg);
+  width: 55%;
+  margin: 0 auto;
+  box-shadow: 0 3rem 6rem rgba($color-black, 0.1);
+  background-color: rgba($color-white, 0.6);
+  border-radius: 3px;
+  padding: 6rem;
+  padding-left: 9rem;
+  font-size: $default-font-size;
+  margin-bottom: 5rem;
+  transform: skewX(-12deg);
 
-    &>* {
-        transform: skewX(12deg);
-    }
-     @include respond(tab-port) {
-        width: 100%;
-        padding: 4rem;
-        padding-left: 7rem;
-        margin: 2rem 4rem;
-    }
+  & > * {
+    transform: skewX(12deg);
+  }
+  @include respond(tab-port) {
+    width: 100%;
+    padding: 4rem;
+    padding-left: 7rem;
+    margin: 2rem 4rem;
+  }
+  @include respond(tab-port) {
+    transform: skew(0);
+  }
+  @media (max-width: 500px) {
+    padding: 2rem;
+    margin: 2rem;
+  }
+
+  &__shape {
+    width: 15rem;
+    height: 15rem;
+    float: left;
+    transform: translateX(-3rem) skewX(12deg);
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
     @include respond(tab-port) {
-        transform: skew(0);
-
+      transform: translate(-3rem) skew(0);
     }
-    @media (max-width:500px) {
-        padding: 2rem;
-        margin: 2rem;
+    @media (max-width: 500px) {
+      transform: translate(0) skew(0);
+      float: none;
+      margin: 0 auto;
+      margin-bottom: 1.8rem;
     }
-
-    &__shape {
-        width: 15rem;
-        height: 15rem;
-        float: left;
-        -webkit-shape-outside: (50% at 50% 50%);
+    @supports (
+      clip-path: polygon(0 0) or (-webkit-clip-path: ploygon(0, 0))) {
+      -webiki-clip-path: circle(50% at 50% 50%);
+      clip-path: circle(50% at 50% 50%);
+      -webkit-shape-outside: (50% at 50% 50%);
         shape-outside: circle(50% at 50% 50%);
-        -webiki-clip-path: circle(50% at 50% 50%);
-        clip-path: circle(50% at 50% 50%);
-        transform: translateX(-3rem) skewX(12deg);
-        position: relative;
-         @include respond(tab-port) {
-            transform: translate(-3rem) skew(0);
-        }
-        @media (max-width:500px) {
-            transform: translate(0) skew(0);
-            float: none;
-            margin:0 auto;
-            margin-bottom:1.8rem; 
-        }
+        border-radius: none;
     }
+  }
 
-    &__image {
-        height: 100%;
-        transform: translateX(-4rem) scale(1.4);
-        transition: all .5s;
+  &__image {
+    height: 100%;
+    transform: translateX(-4rem) scale(1.4);
+    transition: all 0.5s;
+  }
+
+  &__text {
+    transform: skewX(12deg);
+    @include respond(tab-port) {
+      transform: skewX(0);
     }
+  }
 
-    &__text {
-        transform: skewX(12deg);
-        @include respond(tab-port){
-            transform: skewX(0);
-        }
-    }
+  &__caption {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 20%);
+    color: $color-white;
+    text-transform: uppercase;
+    text-align: center;
+    opacity: 0;
+    transition: all 0.5s;
+  }
 
-    &__caption {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, 20%);
-        color: $color-white;
-        text-transform: uppercase;
-        text-align: center;
-        opacity: 0;
-        transition: all .5s;
-    }
+  &:hover &__caption {
+    opacity: 1;
+    transform: translate(-50%, -50%);
+  }
 
-    &:hover &__caption {
-        opacity: 1;
-        transform: translate(-50%, -50%);
-    }
-
-    &:hover &__image {
-        transform: translateX(-4rem) scale(1);
-        filter: blur(3px) brightness(80%);
-    }
-
+  &:hover &__image {
+    transform: translateX(-4rem) scale(1);
+    filter: blur(3px) brightness(80%);
+  }
 }
